1. Реализовано удаление из корзины с учетом ограничения на закончившийся товар