@@ -5,21 +5,6 @@
 </head>
 
 <body>
-    <script>
-        function ready() {
-            //init db context and save it
-            //loadProdRecords();
-
-            //добавление тестовой записи о продукте
-            addProd();
-
-            buttonCart = document.getElementById("submit_button");
-            buttonCart.onclick = submitClick;
-        }
-
-        document.addEventListener("DOMContentLoaded", ready);
-    </script>
-
     <div id="container">
         <div id="storage">
             Склад
