@@ -1,1 +1,4 @@
-1. Реализовано удаление из корзины с учетом ограничения на закончившийся товар
+1. Область действия обработчиков "добавления" и "удаления" из корзины уменьшена до кнопок "Добавить", "Удалить"
+2. Фон кнопок выполнен через внутренний тег img со свойством width: 100%, т.к. background-image: url(); не растягивает фон по ширине div-блока
+3. Обработка события DOMContentLoaded вынесена из index1.html в cart_logic.js, в index1.html оставлены только подключения скриптов в конце body
+4. Все способы задания обработчиков onclick изменены на addEventListener('click', funciton)
